# tree-sitter-bitmark

./: .gitignore  .mise.toml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammar.js.o3  grammar.js.old  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bitmark.pc.in
bindings/c/tree_sitter/: tree-sitter-bitmark.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bitmark/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBitmarkTests/: TreeSitterBitmarkTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: example.bitmark  example2.bitmark
