[package]
name = "tree-sitter-bitmark"
description = "bitmark Bit is used to describe shareable, self-contained, interactive quiz or static content bits"
version = "0.1.0"
authors = ["Get More Brain <richard.sewell@getmorebrain.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bitmark"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/getmorebrain/bitmark-parser-generator-treesitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
